# eye_of_god_grpc

./: CMakeLists.txt
include/: grpc_eye_server.h
src/: main.cpp
src/cifs_grpc/: grpc_eye_server.cpp
src/cifs_grpc/pb_gen/: eye_of_god.grpc.pb.cc  eye_of_god.grpc.pb.h  eye_of_god.pb.cc  eye_of_god.pb.h
src/cifs_grpc/protos/: eye_of_god.proto
